implemented dropdown boxes for date selection tiny styling for said elements

--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,14 @@
     transform: rotate(360deg);
   }
 }
+
+.dropdown-container {
+  display: flex;
+  justify-content: center;
+}
+
+.dropdown-year,
+.dropdown-day,
+.dropdown-month {
+  margin: 0 15px;
+} 
